# huinaibingLinux

./: .gitignore  LICENSE.txt  autoPush.sh  autoPush_win11.bat  readme.md
bash_code/: change2case.sh  change_dir.sh  home_bindir.sh  printformat.sh  sed_func.sh  sed_uptime.sh  test_dir_sl.sh  while_triangle.sh
bash_code/xmls/: add_num.sh  change_input.sh  input.txt  output.txt
cpp_code/: main  main.cpp  readme.md
cpp_code/ask_grade/: CMakeLists.txt  ask_grade  ask_grade.cpp
cpp_code/hw10/: CMakeLists.txt
cpp_code/hw10/src/: Utils.cpp  (+1 more)
cpp_code/inv_mass/: CMakeLists.txt
cpp_code/inv_mass_2/: CMakeLists.txt
cpp_code/inv_mass_hw11/: CMakeLists.txt
cpp_code/inv_mass_hw11/include/: inv_mass_overload.h
cpp_code/inv_mass_hw11/src/: inv_mass_overload.cpp  main.cpp
cpp_code/new_newGrade/: main.cpp
cpp_utils/util4aliroot/: Utils.h
markdown/HWcp/: 3月14日第二次作业 XQY.md  3月26日作业 XQY.md  4月15日作业XQY.md  4月25作业XQY.md  作业XQY.md
markdown/Topics/: topic.md
markdown/o2learning/: o2learning.md
markdown/paper_PHYSICS OF ULTRA-PERIPHERAL/: PHYSICS OF ULTRA-PERIPHERAL.md
markdown/problems/: problems.md
markdown/zzHW/: zzHW.md  四史期末开卷材料.md
o2project/test/: MyTask.cxx
python_code/: .gitignore
python_code/MC/: mc.py  montoCarol.ipynb
python_code/bigHomeWork/: .gitignore  README.MD  main.ipynb  pyproject.toml
python_code/bigHomeWork/models/20250627t1/: SAC.config
python_code/bigHomeWork/models/20250627t2/: SAC.config
python_code/bigHomeWork/models/20250627t3/: SAC.config
python_code/bigHomeWork/models/20250627t4/: SAC.config
python_code/bigHomeWork/models/20250627t5/: SAC.config
python_code/bigHomeWork/models/20250627t6/: SAC.config
python_code/bigHomeWork/models/20250627t7/: SAC.config
python_code/bigHomeWork/src/gym_env/: __init__.py  quadrotor_env.py
python_code/bigHomeWork/src/quadrotor_simulation/: quadrotor.py
python_code/bigHomeWork/src/simulator_config/: __init__.py  environment_cfg.py  quadrotor_cfg.py  test_config.py
python_code/bigHomeWork/src/xqy_test/: quadrotor_test.py
python_code/bigHomeWork/src/xqy_utils/: __init__.py  xqy_utils.py
root_code/: XQY_Utils.h  dontReadMe.md  readme.md
root_code/RootTutorial15/simple_TTree/: CMakeLists.txt
root_code/RootTutorial15/simple_TTree/include/: Ana_mass.hpp  Read_file.hpp
root_code/RootTutorial15/simple_TTree/src/: Ana_mass.cpp  Read_file.cpp  run_all.cpp
root_code/root_hw/13_root/: CMakeLists.txt
root_code/root_hw/13_root/include/: inv_mass_root.h
root_code/root_hw/13_root/src/: inv_mass_root.cpp  main.cpp
(+254 files in other folders)
